Picture size and animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="icon/new_hope_icon_30x30.png">
         <link rel="stylesheet" type="text/css" href="css/bootstrap4.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap3.css">
-        <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
         <script type="text/javascript" src="js/bootstrap4.js"></script>
         <script type="text/javascript" src="js/bootstrap3.js"></script>
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="slogan-logo" style="text-align:center;">
-            <img alt="New Hope Big Logo" src="logo/New_Hope_Logo_Big.png"/>
+            <img alt="New Hope Big Logo" src="logo/new-hope-logo-original.png"/>
         </div>
         <div class="nav">
             <ul>
@@ -48,27 +48,27 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="pictures/carousel_slide/1.jpg" alt="First Slide">
+                    <img class="carousel-picture" id="carousel-picture-1" alt="First Slide">
                     <div class="face">
-                        <div class="desc-background" style="background: white; right: 10%;">
-                            <div  class="desc">优质品牌：<br>Goldwell<br>Goldmater<br>点石安达</div>
+                        <div class="desc-background fade-in-1500ms-067" style="background: white; right: 10%;">
+                            <div class="desc fade-in-3s">优质品牌：<br>Goldwell<br>Goldmater<br>点石安达</div>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="pictures/carousel_slide/2.jpg" alt="Second Slide">
+                    <img class="carousel-picture" id="carousel-picture-2" alt="Second Slide">
                     <div class="face">
-                        <div class="desc-background" style="background: white; left: 15%;">
-                            <div class="desc" style="color:
+                        <div class="desc-background fade-in-1500ms-067" style="background: white; left: 15%;">
+                            <div class="desc fade-in-3s" style="color:
                             black;">从始至终走绿色，科技，安全<br>的发展之路，一直致力于环境<br>保护和科技的相关领域。</div>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="pictures/carousel_slide/3.jpg" alt="Third Slide">
+                    <img class="carousel-picture" id="carousel-picture-3" alt="Third Slide">
                     <div class="face">
-                        <div class="desc-background" style="background: black; right: 10%;">
-                            <div class="desc" style="color:
+                        <div class="desc-background fade-in-1500ms-067" style="background: black; right: 10%;">
+                            <div class="desc fade-in-3s" style="color:
                             white">科研单位的加入 &nbsp;
                             客户的认可<br>知名供应商支持 &nbsp; 高效的管理
                             </div>
@@ -88,8 +88,8 @@
         </div>
         <div class="activities">
             <br><br>
-            <h2 class="head text-center"><img src="./pictures/animation/leaf-256.png">能提供稳定服务的企业一定生机勃勃</h2>
-            <h5 class="text-center padding-top-5">我们公司的动态</h5>
+            <h2 class="head text-center fade-in-1500ms"><img src="./pictures/animation/leaf-256.png">能提供稳定服务的企业一定生机勃勃</h2>
+            <h5 class="text-center padding-top-5 fade-in-1500ms">我们公司的动态</h5>
             <hr class="half-rule">
             <div class="card-block" id="c-b1" style="height:500px;overflow-y:scroll;">
                 <div class="container-fluid">
@@ -160,8 +160,8 @@
         <div class="break" style="background-color: white; height:30px;"></div>
         <div class="latest-products">
             <br>
-            <h2 class="head text-center">坚持推陈出新，是公司继续发展的原动力</h2>
-            <h5 class="text-center padding-top-5">我们的最新产品</h5>
+            <h2 class="head text-center fade-in-1500ms">坚持推陈出新，是公司继续发展的原动力</h2>
+            <h5 class="text-center padding-top-5 fade-in-1500ms">我们的最新产品</h5>
             <hr class="half-rule">
             <div class="card-block" id="c-b2" style="height:500px;overflow-y:scroll;">
                 <div class="container-fluid">
@@ -261,8 +261,8 @@
         <div class="prospect">
             <br>
             <div class="container">
-                <h2 class="text-center">为想让城市更美好，乡村更美丽的人们</h2>
-                <h5 class="text-center padding-top-5">新希望污水处理为所有城市污水处理项目提供完善、科技、快捷的产品和服务，以生态环境保护为目标，以社会经济发展为条件，以客户需求为基础。</h5>
+                <h2 class="text-center fade-in-1500ms">为想让城市更美好，乡村更美丽的人们</h2>
+                <h5 class="text-center padding-top-5 fade-in-1500ms">新希望污水处理为所有城市污水处理项目提供完善、科技、快捷的产品和服务，以生态环境保护为目标，以社会经济发展为条件，以客户需求为基础。</h5>
                 <hr class="half-rule">
                 <div class="row">
                     <div class="col-sm-4">
@@ -284,11 +284,11 @@
             </div>
         </div>
         <div class="break" style="background-color: white; height:30px;"></div>
-        <div class="successful-case">
+        <div class="successful-casesss">
             <br>
-            <h2 class="head text-center">多少次的案例证明，选择我们一定是对的！</h2>
+            <h2 class="head text-center fade-in-1500ms">多少次的案例证明，选择我们一定是对的！</h2>
             <h5 class="head text-center
-            padding-top-5">20多年来行业声誉是日积月累的经验的最好见证，一切都看得到也听得到</h5>
+            padding-top-5 fade-in-1500ms">20多年来行业声誉是日积月累的经验的最好见证，一切都看得到也听得到</h5>
             <hr class="half-rule">
             <div class="marquee">
 				<div class="case-boxes">
@@ -349,9 +349,9 @@
 				</div>
             </div>
         </div>
-        <div class="break" style="background-color: #f1f1f1; height:30px;"></div>
+        <div class="break" style="background-color: white; height:30px;"></div>
         <div class="navbar navbar-default footer">
-            <div class="content">
+            <div class="content fade-in-1500ms">
                 <div style="width: 33.33%; float: left;">
                     <img class="footer-logo" src="logo/New_Hope_Logo_bandw.png">
                 </div>
@@ -368,7 +368,7 @@
                     <a href="itemofuse.html">使用条款</a>
                 </div>
             </div><br>
-            <p class="copyright">Designed and built with all the love in the world by Victor Chen (<a href="https://twitter.com/vc9308"> github</a> <a href="https://github.com/vc9308">twiiter</a> <a href="https://www.facebook.com/profile.php?id=100008310261533">facebook</a> ). Main blacktained by the core team with the help of our contributors.
+            <p class="copyright fade-in-1500ms">Designed and built with all the love in the world by Victor Chen (<a href="https://twitter.com/vc9308"> github</a> <a href="https://github.com/vc9308">twiiter</a> <a href="https://www.facebook.com/profile.php?id=100008310261533">facebook</a> ). Main blacktained by the core team with the help of our contributors.
             <br>本项目源码受 MIT开源协议保护，文档受 CC BY 3.0 开源协议保护。</p>
         </div>
     </body>
