Fix small problem for navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a class="active" href="#home" style="padding-left: 23px;">主页</a></li>
+                <li><a class="home" href="#home" style="padding-left: 23px;">主页</a></li>
                 <li><a href="product/index.html">产品</a></li>
                 <li class="my-dropdown">
                     <a href="#" class="dropbtn dropdown-toggle">服务<span class="caret"></span></a>
@@ -35,7 +35,7 @@
                 </li>	
                 <li><a href="news.html">行业动态</a></li>
                 <li><a href="documents.html">文献</a></li>
-                <li><a href="contacts.html">联系方式</a></li>
+                <li><a href="contacts.html">联系</a></li>
             </ul>
         </div>
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
