Fix problems for navbar

--- a/index.html
+++ b/index.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
     <head>
-        <meta charset="UTF-8" />
         <title>新希望污水处理公司官网</title>
-        <meta name="keywords" content="新希望污水处理公司,新希望污水处理,新希望,污水处理,环保,绿色,污水">
-        <meta name="description" content="新希望污水处理公司官网">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="icon/new_hope_icon_30x30.png">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap4.css">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap3.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap4.js"></script>
-        <script type="text/javascript" src="js/bootstrap3.js"></script>
-        <script type="text/javascript" src="js/myjs.js"></script>
+        <meta charset="UTF-8" />
+        <meta name="author" content="Victor Chen" />
+        <meta name="description" content="新希望污水处理公司官网" />
+        <meta name="keywords"
+        content="新希望污水处理公司,新希望污水处理,新希望,污水处理,环保,绿色,污水
+        /">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 /">
+        <link rel="icon" href="icon/new_hope_icon_30x30.png" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap4.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap3.css" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
+        <script src="js/html5shiv.js"></script>
+        <script src="js/jquery-2.2.4.min.js"></script>
+        <script src="js/bootstrap4.js"></script>
+        <script src="js/bootstrap3.js"></script>
+        <script src="js/myjs.js"></script>
     </head>
     <body>
         <div class="slogan-logo" style="text-align:center;">
             <img alt="New Hope Big Logo" src="logo/new-hope-logo-original.png"/>
         </div>
-        <div class="nav">
+		        <div class="nav">
             <ul>
-                <li><a class="home" href="#home" style="padding-left: 23px;">主页</a></li>
-                <li><a href="product/index.html">产品</a></li>
+                <li><a class="active" href="#home" style="padding-left: 23px;">主页</a></li>
+                <li><a href="#">产品</a></li>
                 <li class="my-dropdown">
                     <a href="#" class="dropbtn dropdown-toggle">服务<span class="caret"></span></a>
                     <div class="dropdown-content">
-                        <a href="./service/water_treatment.html">水处理</a>
-                        <a href="./service/foam_control/html">泡沫控制</a>
-                        <a href="./service/microbe_control.html">微生物控制</a>
-                        <a href="./service/cleaning.html">清洁清洗</a>
-                        <a href="./service/gas_control.html">气体控制</a>
+                      <a href="./service/water_treatment.html">水处理</a>
+                      <a href="./service/foam_control/html">泡沫控制</a>
+                      <a href="./service/microbe_control.html">微生物控制</a>
+                      <a href="./service/cleaning.html">清洁清洗</a>
+                      <a href="./service/gas_control.html">气体控制</a>
                     </div>
-                </li>	
-                <li><a href="news.html">行业动态</a></li>
-                <li><a href="documents.html">文献</a></li>
-                <li><a href="contacts.html">联系</a></li>
-            </ul>
-        </div>
+                </li>   
+                <li><a href="#">行业动态</a></li>
+                <li><a href="#">文献</a></li>
+                <li><a href="#">联系</a></li>
+            </ul>   
+        </div>  
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -51,7 +55,7 @@
                     <img class="carousel-picture" id="carousel-picture-1" alt="First Slide">
                     <div class="face">
                         <div class="desc-background fade-in-1500ms-067" style="background: white; right: 10%;">
-                            <div class="desc fade-in-3s">优质品牌：<br>Goldwell<br>Goldmater<br>点石安达</div>
+                            <div class="desc fade-in-3s">优质品牌：<br />Goldwell<br />Goldmater<br />点石安达</div>
                         </div>
                     </div>
                 </div>
@@ -60,7 +64,7 @@
                     <div class="face">
                         <div class="desc-background fade-in-1500ms-067" style="background: white; left: 15%;">
                             <div class="desc fade-in-3s" style="color:
-                            black;">从始至终走绿色，科技，安全<br>的发展之路，一直致力于环境<br>保护和科技的相关领域。</div>
+                            black;">从始至终走绿色，科技，安全<br />的发展之路，一直致力于环境<br />保护和科技的相关领域。</div>
                         </div>
                     </div>
                 </div>
@@ -70,7 +74,7 @@
                         <div class="desc-background fade-in-1500ms-067" style="background: black; right: 10%;">
                             <div class="desc fade-in-3s" style="color:
                             white">科研单位的加入 &nbsp;
-                            客户的认可<br>知名供应商支持 &nbsp; 高效的管理
+                            客户的认可<br />知名供应商支持 &nbsp; 高效的管理
                             </div>
                         </div>
                     </div>
@@ -87,7 +91,7 @@
             </a>
         </div>
         <div class="activities">
-            <br><br>
+            <br /><br />
             <h2 class="head text-center fade-in-1500ms"><img src="./pictures/animation/leaf-256.png">能提供稳定服务的企业一定生机勃勃</h2>
             <h5 class="text-center padding-top-5 fade-in-1500ms">我们公司的动态</h5>
             <hr class="half-rule">
@@ -149,7 +153,8 @@
                             <div class="card card- h-100">
                                 <div class="card-header"><h5 class="card-title">2014年10月新泽西污水处理超标案，公司被判无罪</h5>
                                 </div>
-                                <div class="card-block"><p><img src="./pictures/activities/7.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>经过一年多来专家的不断查证以及公司律师团的努力，新泽西某镇的污水超标事件被断定与本公司的污水处理方式无关，真正的原因是附近多家工厂排放超标。在2015年12月的这次州法院判决后，公司按照新泽西地方法律将获得2000万美元的赔款，多家超标工厂也将被查封。
+                                <div class="card-block"><p><img
+                                    src="./pictures/activities/7.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>经过一年多来专家的不断查证以及公司律师团的努力，新泽西某镇的污水超标事件被断定与本公司的污水处理方式无关，真正的原因是附近多家工厂排放超标。在2015年12月的这次州法院判决后，公司按照新泽西地方法律将获得2000万美元的赔款，多家超标工厂也将被查封。
                                 </div>
                             </div>
                         </a>
@@ -159,7 +164,7 @@
         </div>
         <div class="break" style="background-color: white; height:30px;"></div>
         <div class="latest-products">
-            <br>
+            <br />
             <h2 class="head text-center fade-in-1500ms">坚持推陈出新，是公司继续发展的原动力</h2>
             <h5 class="text-center padding-top-5 fade-in-1500ms">我们的最新产品</h5>
             <hr class="half-rule">
@@ -169,7 +174,7 @@
                         <a href="" class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
                             <div class="card card- h-100">
                                 <div class="card-header">
-                                    <h5 class="card-title">食品废水处理设备<br>FoodCleanerA5</h5>
+                                    <h5 class="card-title">食品废水处理设备<br />FoodCleanerA5</h5>
                                 </div>
                                 <div class="card-block"><p><img
                                      src="./pictures/latest_products/1.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>
@@ -180,7 +185,7 @@
                         <a href="" class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
                             <div class="card card- h-100">
                                 <div class="card-header">
-                                    <h5 class="card-title">微生物控制的处理<br>Anno Sano</h5>
+                                    <h5 class="card-title">微生物控制的处理<br />Anno Sano</h5>
                                 </div>
                                 <div class="card-block"><p><img src="./pictures/latest_products/2.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>Anno
                                     Sano的各种优势已经在这两年的试验中得到充分验证，随着生产成本不断下降，大量投入运行的门槛也明显下降，公司决定在2015年末在弗吉尼亚正式投入运行，如果运行效果理想将在全美大量投入。
@@ -190,7 +195,7 @@
                         <a href="" class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
                             <div class="card card- h-100">
                                 <div class="card-header">
-                                    <h5 class="card-title">铝制品电解氧化废水处理<br>SuperCleaner 2</h5>
+                                    <h5 class="card-title">铝制品电解氧化废水处理<br />SuperCleaner 2</h5>
                                 </div>
                                 <div class="card-block"><p><img
                                      src="./pictures/latest_products/3.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>
@@ -201,7 +206,7 @@
                         <a href="" class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
                             <div class="card card- h-100">
                                 <div class="card-header">
-                                    <h5 class="card-title">污水恶臭气体处理设备<br>CoolestMan F251</h5>
+                                    <h5 class="card-title">污水恶臭气体处理设备<br />CoolestMan F251</h5>
                                 </div>
                                 <div class="card-block"><p><img
                                      src="./pictures/latest_products/4.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>
@@ -213,7 +218,7 @@
                         <a href="" class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
                             <div class="card card- h-100">
                                 <div class="card-header">
-                                    <h5 class="card-title">一体化化妆品污水处理<br>Suruke O3</h5>
+                                    <h5 class="card-title">一体化化妆品污水处理<br />Suruke O3</h5>
                                 </div>
                                 <div class="card-block"><p><img
                                      src="./pictures/latest_products/5.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>
@@ -224,7 +229,7 @@
                         <a href="" class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
                             <div class="card card- h-100">
                                 <div class="card-header">
-                                    <h5 class="card-title">中和絮凝沉淀排泥一体化<br>Nakki K721</h5>
+                                    <h5 class="card-title">中和絮凝沉淀排泥一体化<br />Nakki K721</h5>
                                 </div>
                                 <div class="card-block"><p><img
                                      src="./pictures/latest_products/6.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>SCD-高密度沉淀池高沉降过程是我们公司多年的研究和发展的产物,在快速沉降过程。过程是市场上最先进的澄清过程。很快得到了广大用户的认可,过程解决方案最适合的治疗广泛的水品质。紧凑、灵活,操作方便,快速澄清过程是理想的方便安装的设施。
@@ -234,7 +239,7 @@
                         <a href="" class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
                             <div class="card card- h-100">
                                 <div class="card-header">
-                                    <h5 class="card-title">高能离子废气净化器<br>Power K5</h5>
+                                    <h5 class="card-title">高能离子废气净化器<br />Power K5</h5>
                                 </div>
                                 <div class="card-block"><p><img
                                      src="./pictures/latest_products/7.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>
@@ -245,7 +250,8 @@
                         <a href="" class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
                             <div class="card card- h-100">
                                 <div class="card-header"><h5
-                                     class="card-title">印移印洗版钢结构一体化<br>CC253</h5>
+                                     class="card-title">印移印洗版钢结构一体化<br
+                                     />CC253</h5>
                                 </div>
                                 <div class="card-block"><p><img
                                      src="./pictures/latest_products/8.jpg" class="img-fluid mx-auto" /></p><p class="text-left lead2"></p>
@@ -259,7 +265,7 @@
         </div>
         <div class="break" style="background-color: #f1f1f1; height:30px;"></div>
         <div class="prospect">
-            <br>
+            <br />
             <div class="container">
                 <h2 class="text-center fade-in-1500ms">为想让城市更美好，乡村更美丽的人们</h2>
                 <h5 class="text-center padding-top-5 fade-in-1500ms">新希望污水处理为所有城市污水处理项目提供完善、科技、快捷的产品和服务，以生态环境保护为目标，以社会经济发展为条件，以客户需求为基础。</h5>
@@ -285,7 +291,7 @@
         </div>
         <div class="break" style="background-color: white; height:30px;"></div>
         <div class="successful-casesss">
-            <br>
+            <br />
             <h2 class="head text-center fade-in-1500ms">多少次的案例证明，选择我们一定是对的！</h2>
             <h5 class="head text-center
             padding-top-5 fade-in-1500ms">20多年来行业声誉是日积月累的经验的最好见证，一切都看得到也听得到</h5>
@@ -356,20 +362,20 @@
                     <img class="footer-logo" src="logo/New_Hope_Logo_bandw.png">
                 </div>
                 <div style="width: 33.33%; float: left; text-align: left;">
-                    <a href="team.html">团队</a><br>
-                    <a href="sponsor.html">赞助商</a><br>
-                    <a href="employ.html">加入我们</a><br>
-                    <a href="faqs.html">FAQs</a><br>
+                    <a href="team.html">团队</a><br />
+                    <a href="sponsor.html">赞助商</a><br />
+                    <a href="employ.html">加入我们</a><br />
+                    <a href="faqs.html">FAQs</a><br />
                 </div>
                 <div style="width: 33.33%; float: left; text-align: left;">
-                    <a href="tel:+8602012345678">+86 (020) 12345678</a><br>
-                    <a href="mailto:vc93@icloud.com?Subject=Hellow%20again" target="_top">vc93@icloud.com</a><br>
-                    <a href="privacyPolicy.html">隐私政策</a><br>
+                    <a href="tel:+8602012345678">+86 (020) 12345678</a><br />
+                    <a href="mailto:vc93@icloud.com?Subject=Hellow%20again" target="_top">vc93@icloud.com</a><br />
+                    <a href="privacyPolicy.html">隐私政策</a><br />
                     <a href="itemofuse.html">使用条款</a>
                 </div>
-            </div><br>
+            </div><br />
             <p class="copyright fade-in-1500ms">Designed and built with all the love in the world by Victor Chen (<a href="https://twitter.com/vc9308"> github</a> <a href="https://github.com/vc9308">twiiter</a> <a href="https://www.facebook.com/profile.php?id=100008310261533">facebook</a> ). Main blacktained by the core team with the help of our contributors.
-            <br>本项目源码受 MIT开源协议保护，文档受 CC BY 3.0 开源协议保护。</p>
+            <br />本项目源码受 MIT开源协议保护，文档受 CC BY 3.0 开源协议保护。</p>
         </div>
     </body>
 </html>
