--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <link rel="icon" href="icon/new_hope_icon_30x30.png" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap4.css" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap3.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.cs" />
         <link rel="stylesheet" type="text/css" href="css/main.css" />
         <script src="js/html5shiv.js"></script>
         <script src="js/jquery-2.2.4.min.js"></script>
         <script src="js/bootstrap4.js"></script>
         <script src="js/bootstrap3.js"></script>
+        <script src="js/jquery.mobile-1.4.5.js"></script>
         <script src="js/myjs.js"></script>
     </head>
     <body>
