test buttom 'jump to next section'

--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
                 </div>
             </div>
         </div>
+        <div class="activities2next" onclick="jump_to_latest_products()">下部分</div>
         <div class="break" style="background-color: white; height:30px;"></div>
-        <div class="latest-products">
+        <div id="latest-products" class="latest-products">
             <br />
             <h2 class="head text-center fade-in-1500ms">坚持推陈出新，是公司继续发展的原动力</h2>
             <h5 class="text-center padding-top-5 fade-in-1500ms">我们的最新产品</h5>
