fix iPhone's display problem

--- a/index.html
+++ b/index.html
@@ -373,14 +373,14 @@
       <div style="width: 33.33%; float: left;">
         <img class="footer-logo" src="logo/New_Hope_Logo_bandw.png">
       </div>
-      <div style="width: 33.33%; float: left; text-align: left;">
+      <div class="column-1" style="float: left; text-align: left;">
         <img class="footer-logo-mobile" src="logo/New_Hope_Logo_bandw.png">
         <a href="team.html">团队</a><br />
         <a href="sponsor.html">赞助商</a><br />
         <a href="employ.html">加入我们</a><br />
         <a href="faqs.html">FAQs</a><br />
       </div>
-      <div style="width: 33.33%; float: left; text-align: left;">
+      <div class="column-2" style="width: 33.33%; float: left; text-align: left;">
         <a href="tel:+8602012345678">+86 (020) 12345678</a><br />
         <a href="mailto:vc93@icloud.com?Subject=Hellow%20again" target="_top">vc93@icloud.com</a><br />
         <a href="privacyPolicy.html">隐私政策</a><br />
